manifests/prototype/meshcentral/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: meshcentral
  name: meshcentral
  namespace: meshcentral
spec:
  ports:
    - name: mc-ssl
      port: 443
      protocol: TCP
      targetPort: 443
    - name: mc-cira
      port: 4433
      protocol: TCP
      targetPort: 4433
  selector:
    app: meshcentral
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.80.101
  type: LoadBalancer
