manifests/prototype/meshcentral/ingress-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: meshcentral
  namespace: meshcentral
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`meshcentral.bauer.mt`)
      kind: Rule
      services:
        - name: meshcentral
          port: 4433
