manifests/prototype/meshcentral/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meshcentral
  namespace: meshcentral
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mesh.bauer.mt`)
      kind: Rule
      services:
        - name: meshcentral
          port: 443
    # - match: Host(`mesh.bauer.mt`)
    #   kind: Rule
    #   services:
    #     - name: meshcentral
    #       port: 4433
    # middlewares:
    #   - name: default-headers
    # leave undefined to use the default headers in default namespace
  # tls:
  #   secretName: jimsgarage-tls # change to your cert name
  # leave undefined to use the traefik default cert (wildcard is present)
